# orbit2-rs

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
csrc/: echo-stubs.c  echo.h
examples/: echo_client.rs  echo_server.rs
orbit2/: Cargo.toml  README.md
orbit2-bt/: Cargo.toml  build.rs
orbit2-bt/src/: lib.rs
orbit2-bt/tests/: test_account.rs  test_calculator.rs  test_echo.rs
orbit2-bt/tests/common/: mod.rs
orbit2-buildtools/: Cargo.toml  README.md
orbit2-buildtools/src/: lib.rs
orbit2-buildtools/tests/: test_account.rs  test_calculator.rs  test_echo.rs
orbit2-buildtools/tests/common/: mod.rs
orbit2-sample-idls/: Cargo.toml  build.rs
orbit2-sample-idls/src/: echo.rs  lib.rs
orbit2-sample-idls/static/: echo.idl
orbit2-sys/: Cargo.toml  README.md  build.rs  wrapper.h  wrapper_echo.h  wrapper_echo_impl.h
orbit2-sys/csrc/: echo-common.c  echo-skelimpl.c  echo-skels.c
orbit2-sys/examples/: echo_client.rs  echo_server.rs
orbit2-sys/src/: toolkit.rs
orbit2-sys/src/service/: echo_impl.rs
orbit2-sys/tests/: echo.rs
orbit2/examples/: echo_client.rs  orbit2_echo_client.rs
orbit2/src/: lib.rs
src/: core.rs  echo.rs  lib.rs  service.rs  toolkit.rs
src/echo/: servant.rs
src/service/: echo.rs  echo_impl.rs
static/: echo.idl
