[package]
name = "orbit2-sys"
version = "0.1.1-alpha.1"
edition = "2021"
description = "A Rust binding for the ORBit2 Gnome CORBA library"
license = "MIT"
documentation = "https://github.com/jeteve/orbit2-rs"
homepage = "https://github.com/jeteve/orbit2-rs"

[dependencies]
log = ">=0.4.21"

[build-dependencies]
bindgen = ">=0.69.4"
pkg-config = ">=0.3.30"
cc = ">=1.0.99"
